--- a/src/pug/sections/articles/profile-article-01-alien.pug
+++ b/src/pug/sections/articles/profile-article-01-alien.pug
@@ -75,6 +75,6 @@
     include ../comments/profile-article-comment-2
   //end profile-article__comments
 
-  include ../profile-article-footer
+  include profile-article-footer
 
 //end profile-article-01
