--- a/src/pug/sections/articles/profile-article-01.pug
+++ b/src/pug/sections/articles/profile-article-01.pug
@@ -80,6 +80,6 @@
     //-include profile-article-comment-5
   //end profile-article__comments
 
-  include ../profile-article-footer
+  include profile-article-footer
 
 //end profile-article-01
