--- a/src/pug/sections/articles/profile-article-03.pug
+++ b/src/pug/sections/articles/profile-article-03.pug
@@ -70,6 +70,6 @@
 
   //end profile-article__comments
 
-  include ../profile-article-footer-crop
+  include profile-article-footer-crop
 
 //end profile-article-03
