--- a/src/pug/sections/articles/profile-article-04-alien.pug
+++ b/src/pug/sections/articles/profile-article-04-alien.pug
@@ -61,6 +61,6 @@
       //end profile-article__icons
   //end profile-article__body
 
-  include ../profile-article-footer-crop
+  include profile-article-footer-crop
 
 //end profile-article-04
