--- a/src/pug/sections/articles/profile-article-06.pug
+++ b/src/pug/sections/articles/profile-article-06.pug
@@ -103,6 +103,6 @@
     include ../comments/profile-article-comment-2
   //end profile-article__comments
 
-  include ../profile-article-footer-crop
+  include profile-article-footer-crop
 
 //end profile-article-06
