--- a/src/pug/sections/articles/profile-article-07.pug
+++ b/src/pug/sections/articles/profile-article-07.pug
@@ -97,6 +97,6 @@
 
   a(href="#").profile-article__all-comments Посмотреть все комментарии
 
-  include ../profile-article-footer-crop
+  include profile-article-footer-crop
 
 //end profile-article-07
