--- a/src/pug/sections/my-course-body-tabs.pug
+++ b/src/pug/sections/my-course-body-tabs.pug
@@ -33,7 +33,7 @@
       h2.my-course-body-tabs__tab-title Комментарии к занятию
       include comments/profile-article-comment
       include comments/profile-article-comment-2
-      include ../sections/profile-article-footer-crop
+      include articles/profile-article-footer-crop
     //end my-course-body-tabs__tab-01
 
     //begin my-course-body-tabs__tab-02
@@ -52,7 +52,7 @@
       h2.my-course-body-tabs__tab-title Комментарии к занятию
       include comments/profile-article-comment
       include comments/profile-article-comment-2
-      include ../sections/profile-article-footer-crop
+      include articles/profile-article-footer-crop
       //end my-course-body-tabs__materials
 
     //end my-course-body-tabs__tab-02
@@ -66,6 +66,6 @@
       h2.my-course-body-tabs__tab-title Комментарии к занятию
       include comments/profile-article-comment
       include comments/profile-article-comment-2
-      include ../sections/profile-article-footer-crop
+      include articles/profile-article-footer-crop
     //end my-course-body-tabs__tab-03
 //end my-course-body-tabs
