--- a/src/pug/sections/articles/profile-article-02-alien.pug
+++ b/src/pug/sections/articles/profile-article-02-alien.pug
@@ -69,6 +69,6 @@
 
   //end profile-article__comments
 
-  include ../profile-article-footer-crop
+  include profile-article-footer-crop
 
 //end profile-article-02
