--- a/src/pug/sections/articles/profile-article-02.pug
+++ b/src/pug/sections/articles/profile-article-02.pug
@@ -66,6 +66,6 @@
     include ../comments/profile-article-comment-2
   //end profile-article__comments
 
-  include ../profile-article-footer-crop
+  include profile-article-footer-crop
 
 //end profile-article-02
