--- a/src/pug/sections/my-course-homework-body-tabs.pug
+++ b/src/pug/sections/my-course-homework-body-tabs.pug
@@ -135,7 +135,7 @@
       h2.my-course-body-tabs__tab-title Диалог с Куратором
       include comments/profile-article-comment-8
       include comments/profile-article-comment-9
-      include ../sections/profile-article-footer-crop
+      include articles/profile-article-footer-crop
     //end my-course-body-tabs__tab-01
 
     //begin my-course-body-tabs__tab-02
@@ -154,7 +154,7 @@
       h2.my-course-body-tabs__tab-title Диалог с Куратором
       include comments/profile-article-comment-8
       include comments/profile-article-comment-9
-      include ../sections/profile-article-footer-crop
+      include articles/profile-article-footer-crop
 
     //end my-course-body-tabs__tab-02
 //end my-course-body-tabs
