--- a/src/style/pages/_teachers.scss
+++ b/src/style/pages/_teachers.scss
@@ -35,10 +35,13 @@
 
 .teachers-list {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
   margin-bottom: 35px;
+
+  @include max(1220) {
+    justify-content: space-between;
+  }
 }
 
 .teachers-item {
@@ -46,6 +49,7 @@
   display: flex;
   flex-direction: column;
   width: calc(33.33% - 20px);
+  margin-right: 30px;
   margin-bottom: 30px;
   padding: 20px 20px 10px 20px;
   border-radius: 5px;
@@ -53,10 +57,13 @@
 
   @include max(1220) {
     width: calc(50% - 15px);
+    margin-right: 0;
   }
-
   @include max(760) {
     width: 100%;
+  }
+  &:nth-child(3n) {
+    margin-right: 0;
   }
 }
 
