--- a/src/pug/pages/profile-edit.pug
+++ b/src/pug/pages/profile-edit.pug
@@ -94,8 +94,8 @@ block content
                     //img(src="assets/img/profile-top-ava.jpg" alt="ava")
                 .profile-edit__form-ava--right
                   .profile-edit__ava-download-btn
-                    input(type='file').btn.btn--dark
                     span.btn.btn--dark Загрузить аватар
+                      input(type='file')
                   span.profile-edit__ava-text Вы можете загрузить файл в форматах  jpg и png.
                   p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.
               //end profile-edit__form-ava
