--- a/src/pug/sections/header/profile-header-empty.pug
+++ b/src/pug/sections/header/profile-header-empty.pug
@@ -18,8 +18,8 @@
 
     //begin profile-header__icons-list
     ul.profile-header__icons-list
-      li.profile-header__icons-item
-        a(href="#").profile-header__icons-link.profile-header__icons-link--message
+      li.profile-header__icons-item.popup-open
+        a(href="#popup-enter").profile-header__icons-link.profile-header__icons-link--message
           +svg('messages')
           //-.profile-header__icons-counter
             span 22
