--- a/src/pug/sections/header/profile-header.pug
+++ b/src/pug/sections/header/profile-header.pug
@@ -19,7 +19,7 @@
     //begin profile-header__icons-list
     ul.profile-header__icons-list
       li.profile-header__icons-item
-        a(href="#").profile-header__icons-link.profile-header__icons-link--message.active
+        a(href="#popup-enter").profile-header__icons-link.profile-header__icons-link--message.active.popup-open
           +svg('messages')
           .profile-header__icons-counter
             span 22
