--- a/src/style/sections/_profile-edit.scss
+++ b/src/style/sections/_profile-edit.scss
@@ -209,15 +209,16 @@
 
 .profile-edit__ava-download-btn {
   position: relative;
+  display: inline-block;
   margin-bottom: 15px;
   cursor: pointer;
-  display: inline-block;
   input {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    width: 100%;
     margin: auto;
     cursor: pointer;
     opacity: 0;
